--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "serve": "^14.1.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
@@ -18,13 +19,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+	  "serve": "node ./node_modules/serve/build/main.js -s build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
