adding it to app-escrita submodules

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -16,11 +18,12 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "lint": "eslint src/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-      "eject": "react-scripts eject",
-	  "serve": "node ./node_modules/serve/build/main.js -s build"
+    "eject": "react-scripts eject",
+    "serve": "node ./node_modules/serve/build/main.js -s build"
   },
   "eslintConfig": {
     "extends": []
@@ -38,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
